@@ -1,3 +1,15 @@
+2009-04-28  Chris Fleizach  <cfleizach@apple.com>
+
+        Reviewed by Darin Adler.
+
+        Bug 25449: AX: Respect the alt tag of ARIA button as AXDescription
+        https://bugs.webkit.org/show_bug.cgi?id=25449
+
+        Test: accessibility/img-aria-button-alt-tag.html
+
+        * page/AccessibilityRenderObject.cpp:
+        (WebCore::AccessibilityRenderObject::accessibilityDescription):
+
 2009-04-28  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by John Sullivan.
