@@ -1,3 +1,13 @@
+2009-04-28  Chris Fleizach  <cfleizach@apple.com>
+
+        Reviewed by Darin Adler.
+
+        Bug 25449: AX: Respect the alt tag of ARIA button as AXDescription
+        https://bugs.webkit.org/show_bug.cgi?id=25449
+
+        * accessibility/img-aria-button-alt-tag-expected.txt: Added.
+        * accessibility/img-aria-button-alt-tag.html: Added.
+
 2009-04-28  Eric Carlson  <eric.carlson@apple.com>
 
         Reviewed by Adam Roben
